Archive2/e2/7ccc5ab96d3f07/output
In file included from main.cpp:2:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/chrono:35:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/c++0x_warning.h:32:2: error: This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
#error This file requires compiler and library support for the \
 ^
main.cpp:7:26: error: expected namespace name
    using namespace std::literals;
                    ~~~~~^
main.cpp:9:5: error: 'auto' type specifier is a C++11 extension [-Werror,-Wc++11-extensions]
    auto start = std::chrono::high_resolution_clock::now();
    ^
main.cpp:9:23: error: no member named 'chrono' in namespace 'std'
    auto start = std::chrono::high_resolution_clock::now();
                 ~~~~~^
main.cpp:10:10: error: no member named 'this_thread' in namespace 'std'
    std::this_thread::sleep_for(2s);
    ~~~~~^
main.cpp:10:34: error: invalid suffix 's' on integer constant
    std::this_thread::sleep_for(2s);
                                 ^
main.cpp:11:5: error: 'auto' type specifier is a C++11 extension [-Werror,-Wc++11-extensions]
    auto end = std::chrono::high_resolution_clock::now();
    ^
main.cpp:11:21: error: no member named 'chrono' in namespace 'std'
    auto end = std::chrono::high_resolution_clock::now();
               ~~~~~^
main.cpp:12:10: error: no member named 'chrono' in namespace 'std'
    std::chrono::duration<double, std::milli> elapsed = end-start;
    ~~~~~^
main.cpp:12:33: error: expected '(' for function-style cast or type construction
    std::chrono::duration<double, std::milli> elapsed = end-start;
                          ~~~~~~^
main.cpp:12:40: error: no member named 'milli' in namespace 'std'
    std::chrono::duration<double, std::milli> elapsed = end-start;
                                  ~~~~~^
main.cpp:12:47: error: use of undeclared identifier 'elapsed'
    std::chrono::duration<double, std::milli> elapsed = end-start;
                                              ^
main.cpp:13:31: error: use of undeclared identifier 'elapsed'
    std::cout << "Waited " << elapsed.count() << " ms\n";
                              ^
main.cpp:14:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
14 errors generated.
